Changed title's top padding to fix gap between title and top nav bar when the page is all the way at the top

--- a/Resume/css/style.css
+++ b/Resume/css/style.css
@@ -52,7 +52,7 @@ p.title{
 	color: white;
 	text-shadow: -5px 5px 5px #000000;
 	margin: 0px;
-	padding-top: 5%;
+	padding-top: 3%;
 }
 img.myPic{
 	display: block;
